Sat Jan 22 11:49:55 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: fixing merge key support
	  when multiple merge keys are specified.

	* test/psych/test_merge_keys.rb: tests for multi-merge key support
	
Sat Jan 22 11:33:04 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: merge keys are actually
	  part of YAML 1.1, so they should be supported.  Remove warning and
	  merge keys to parent.  [ruby-core:34679]

	* test/psych/test_merge_keys.rb: test for merge keys

Thu Jul 15 00:35:09 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (localtime_with_gmtoff_zone): renamed from
	  localtime_with_gmtoff and return the timezone abbreviation name.
	  (guess_local_offset): return the isdst and timezone abbreviation name.
	  (localtimew): use the returned isdst and timezone abbreviation name.
	  [ruby-core:31275]

Mon Nov 22 14:22:45 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (time_zone): use rb_locale_str_new_cstr to set encoding
	  as locale and convert its content to internal encoding.
	  [ruby-core:33278]

Fri Jan 14 14:01:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* pack.c (pack_unpack): the resulted string of unpack('M') must have
	  ASCII-8BIT encoding (and ENC_CODERANGE_VALID). [ruby-core:34482]

Sat Dec 25 20:01:40 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (pipe_open): Added rb_thread_atfork(). We must reinitialize
	  GVL at new process creation.

Sat Feb  5 10:09:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_get_expanded_load_path): always expand load paths.

Tue Jul  6 22:57:21 2010  Tanaka Akira  <akr@fsij.org>

	* io.c (nogvl_copy_stream_sendfile): jump to retry_sendfile directly
	  to avoid select() on a socket which TCP state is CLOSED.
	  patch by Eric Wong.  [ruby-core:31053]

Mon May 30 15:44:16 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_mult): as r31805, volatile it.